# ai-assistant

./: Dockerfile  Makefile  db.py  main.py  models.py  pyproject.toml
.github/workflows/: build_and_deploy.yml
