[project]
name = "ai-trade-assist"
version = "0.24.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi-login>=1.10.3",
    "fastapi>=0.115.6",
    "logfire[fastapi,sqlite3]>=2.9.0",
    "opentelemetry-instrumentation-asgi>=0.50b0",
    "pydantic-ai>=0.0.14",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "sqlalchemy>=2.0.36",
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.4",
    "python-jose>=3.3.0",
    "psycopg2-binary>=2.9.10",
]
